Sat May 31 18:54:34 2003  Joern Thyssen  <jth@gnubg.org>

	Add ply-buttons to theory widget
	(suggested by Albert Silver)

	* gtktheory.c (PlyClicked): new routine.
	* gtktheory.c (GTKShowTheory): add radio buttons for plies.	

Fri May 30 21:27:04 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (GTKShowTempMap): make dialog non-modal.
	* gtkchequer.c (CreateMoveListTools): add temp. map button.
	* gtkchequer.c (MoveListTempMapClicked): call temp. map.

Fri May 30 20:43:50 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c: improvements of temperature map.
	(suggested by Ian Shaw and Michael Depreli)

Fri May 30 17:41:42 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_set): move calculation of nchequers to
	_after_ bd->points[26] and bd->points[27] has been calculated.
	* gtkboard.c (write_points): fix sign bug.
	(bug #3806 reported by Henrik Ravn)

Fri May 30 12:58:27 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (ShowMove): fix bug #3809
	* gtkboard.c (UpdateMove): new function.
	(bug #3809 reported by Henrik Ravn)

Thu May 29 21:10:47 2003  Joern Thyssen  <jth@gnubg.org>

	Implement Sho Sengoku Equity Temperature Map
	(suggested by Yoshito Takeuchi)

	* gtktempmap.c, Makefile.am: new file
	* gnubg.c: new command "show temperaturemap"
	* show.c (CommandShowTemperatureMap): new function.
	* gtkboard.c (DrawDie): declare function extern.
	* gtkgame.c: new menu entry.

Thu May 29 13:28:46 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal): bug fixes + resignations.
	* drawboard.c (ParseFIBSBoard): let negative values of "doubled"
	represent resignations.
	(contributed by Rod Roark)

Thu May 29 13:11:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputl, outputerrv): add fflush.

Thu May 29 12:30:33 2003  Joern Thyssen  <jth@gnubg.org>

	New toolbar button for changing direction of play.

	* gtkboard.c (board_init): draw new button.
	* gtkboard.c (toggle_clockwise): new function.